# drinkprime-tracker

./: .gitignore  Cargo.toml  README.md  config.json.sample
src/: config.rs  fetcher.rs  main.rs  reporter.rs
