[package]
name = "drinkprime-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
rusqlite = { version = "0.34.0",features = ["bundled"] }
serde = { version = "1.0.218",  features = ["derive"] }
serde_json = "1.0.140"
tokio = { version ="1.44.0", features = ["full"] }
clap = { version = "4", features = ["derive"] }

